--- a/02_レシピ/01_カウンター/index.html
+++ b/02_レシピ/01_カウンター/index.html
@@ -15,7 +15,9 @@
     <div>
       <h2 id="display">0</h2>
     </div>
-    <button id="plus-button">+1</button>
+    <!-- <button id="plus-button">+1</button>
+    <button id="minus-button">-1</button>
+    <button id="double-button">*2</button> -->
 
     <script src="main.js"></script>
   </body>
