--- a/04_ゼミ/week4/work3.html
+++ b/04_ゼミ/week4/work3.html
@@ -5,6 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vue自動販売機</title>
+    <style>
+      section:not(:first-of-type) {
+        margin-top: 2rem;
+      }
+      .container {
+        display: inline-block;
+        padding: 0.5rem;
+        border: 1px solid #333;
+      }
+      .drinks {
+        display: flex;
+      }
+      .drink:not(:first-of-type) {
+        padding-left: 0.5rem;
+      }
+    </style>
   </head>
   <body>
     <h1>自動販売機</h1>
@@ -133,30 +149,26 @@
       });
     </script>
 
-    <!-- 5. 複数の飲み物を表示する (v-forについて) -->
-    <section id="app5">
+    <!-- 5. 複数の飲み物を表示する -->
+    <section id="app6">
       <h3>複数の飲み物を表示する</h3>
 
       <div>
         <div v-for="drink in drinks">
-          <div>{{ drink.name }}（{{ drink.stock }}）</div>
+          <div>{{ drink.name }}（{{drink.stock}}）</div>
           <button v-on:click="kau(drink)" v-bind:disabled="drink.stock === 0">
             {{ drink.price }}円
           </button>
+        </div>
+        <div v-for="name in kattaDrinkNames">
+          <div>{{ name }}</div>
         </div>
       </div>
     </section>
 
     <script>
       new Vue({
-        el: "#app5",
-        // data: {
-        //   drink: {
-        //     name: "お茶",
-        //     price: 120,
-        //     stock: 3
-        //   }
-        // },
+        el: "#app6",
         data: {
           drinks: [
             {
@@ -169,26 +181,81 @@
               price: 200,
               stock: 3
             }
-          ]
+          ],
+          kattaDrinkNames: []
         },
         methods: {
           kau: function (drink) {
-            alert(drink.name + "を買いました。");
+            if (drink.stock > 0) {
+              drink.stock -= 1;
+              this.kattaDrinkNames.push(drink.name);
+            }
           }
         }
       });
     </script>
+
+    <!-- 7. 見た目を整える -->
+    <section id="app7">
+      <h3>見た目を整える</h3>
+
+      <div class="container">
+        <div class="drinks">
+          <div v-for="drink in drinks" class="drink">
+            <div>{{ drink.name }}（{{drink.stock}}）</div>
+            <button v-on:click="kau(drink)" v-bind:disabled="drink.stock === 0">
+              {{ drink.price }}円
+            </button>
+          </div>
+        </div>
+
+        <hr />
+
+        <span v-for="icon in kattaDrinkIcons">{{ icon }}</span>
+      </div>
+    </section>
+
+    <script>
+      new Vue({
+        el: "#app7",
+        data: {
+          drinks: [
+            {
+              name: "お茶",
+              price: 120,
+              icon: "🍵",
+              stock: 3
+            },
+            {
+              name: "水",
+              price: 200,
+              icon: "🚰",
+              stock: 3
+            }
+          ],
+          kattaDrinkIcons: []
+        },
+        methods: {
+          kau: function (drink) {
+            if (drink.stock > 0) {
+              drink.stock -= 1;
+              this.kattaDrinkIcons.push(drink.icon);
+            }
+          }
+        }
+      });
+    </script>
+
+    <!-- === このメッセージは消しても構いません === -->
+
+    <!-- ✅ 👈のメニューから一番下の「👬」のアイコンを選んで -->
+    <!--    Live Modeを「Everyone cab edit」に変更した後、 -->
+    <!--    「You're live!」の下、「Stop Session」の上、にあるリンクをShareしましょう -->
+    <!-- ✅ CodeSandBoxはVS Codeとほぼ同じ様に扱えます。 -->
+    <!-- ✅ 👉にある画面が実行画面です。 -->
+    <!-- ✅ 👉の👇にある「Console」が実行時のConsoleになります。 -->
+    <!--    たまに挙動がおかしい時があるので気をつけましょう。 -->
+
+    <!-- =============================== -->
   </body>
 </html>
-
-<!-- === このメッセージは消しても構いません === -->
-
-<!-- ✅ 👈のメニューから一番下の「👬」のアイコンを選んで -->
-<!--    Live Modeを「Everyone cab edit」に変更した後、 -->
-<!--    「You're live!」の下、「Stop Session」の上、にあるリンクをShareしましょう -->
-<!-- ✅ CodeSandBoxはVS Codeとほぼ同じ様に扱えます。 -->
-<!-- ✅ 👉にある画面が実行画面です。 -->
-<!-- ✅ 👉の👇にある「Console」が実行時のConsoleになります。 -->
-<!--    たまに挙動がおかしい時があるので気をつけましょう。 -->
-
-<!-- =============================== -->
