--- a/01_テキスト/04_Vueの基礎/index.html
+++ b/01_テキスト/04_Vueの基礎/index.html
@@ -8,6 +8,10 @@
 <body>
   <h1>Vueの基礎</h1>
   <!-- ↓ここに追加する -->
+  <div id="app">
+    <div>{{ count }}</div>
+    <button v-on:click="countUp">＋１</button>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
   <script src="main.js"></script>
